# Nano-BMP

./: CMakeLists.txt  README.md
include/: nano_bmp.h
src/: CMakeLists.txt  nano_bmp.c
test/: CMakeLists.txt  test.c
